--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,11 +5,11 @@
 		"noImplicitAny": true,
 		"module": "commonjs",
 		"target": "es6",
-		"strictNullChecks": true
+		"strictNullChecks": true,
+		"baseUrl": "./src/"
 	},
 	"include": [
-		"./src/**/*.ts",
-		"./tests/**/*.ts"
+		"./src/**/*.ts"
 	],
 	"exclude": [
 		"./node_modules"
